--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 @font-face {
     font-family: 'ag';
-    src: url('../font/AppleGaramond\ 복사본.ttf') format('truetype');
+    src: url('./AppleGaramond.ttf') format('truetype');
 }
 
 
