--- a/style2.css
+++ b/style2.css
@@ -17,13 +17,13 @@ body {
   
   @font-face {
     font-family: 'ag';
-    src: url('../font/AppleGaramond\ 복사본.ttf') format('truetype');
+    src: url('./AppleGaramond.ttf') format('truetype');
 }
 
 
   @font-face {
     font-family: 'cipher';
-    src: url('../font/BabelStoneClubPenguin.ttf') format('truetype');
+    src: url('./BabelStoneClubPenguin.ttf') format('truetype');
   }
 
   
