--- a/style2.css
+++ b/style2.css
@@ -15,15 +15,11 @@ body {
     flex-direction: column;
   }
   
-  @font-face {
-    font-family: 'ag';
-    src: url('./AppleGaramond.ttf') format('truetype');
-}
-
+  @import url('https://fonts.cdnfonts.com/css/apple-garamond');
 
   @font-face {
-    font-family: 'cipher';
-    src: url('./BabelStoneClubPenguin.ttf') format('truetype');
+    font-family: 'Cipher';
+    src: url('./cipher.ttf');
   }
 
   
@@ -49,7 +45,7 @@ h1 {
     align-items: center;
     justify-content: center;
     font-size: 120px;
-    font-family: 'ag';
+    font-family: 'Apple Garamond';
     color: blue;
     text-shadow: 2px 2px 10px rgba(255, 255, 255, 0.8), -2px -2px 10px rgba(0, 0, 0, 0.8); /* 두 개의 그림자 추가 */
   }
@@ -75,7 +71,7 @@ ul {
     background-color: blue;
     height: 30px;
     margin-top: 250px;
-    font-family: 'ag';
+    font-family: 'Apple Garamond';
     justify-content: space-evenly;
     align-items: baseline;
     display: flex;
@@ -88,7 +84,7 @@ ul {
     text-align: center;
     width: 80px;
     height: 30px;
-    font-family: 'ag';
+    font-family: 'Apple Garamond';
     font-size: 20px;
   }
 
@@ -121,7 +117,7 @@ ul {
   .text {
       margin: 0 275px;
       color: crimson;
-      font-family: 'cipher', serif;
+      font-family: 'Cipher', serif;
       font-size: 13px;
       line-height: 1.4;
       column-gap: 10px;
@@ -199,7 +195,7 @@ ul {
       left: 10px;
       color: black;
       font-size: 60px;
-      font-family: 'ag';
+      font-family: 'Apple Garamond';
     }
 
     .accelatext {
@@ -271,7 +267,7 @@ ul {
         margin-left: 0;
         margin-right: 0;
         color: crimson;
-        font-family: 'cipher', serif;
+        font-family: 'Cipher', serif;
         font-size: 13px;
         line-height: 1.4;
         column-width: 210px;
